--- a/react-shop/src/styles/ProductList.module.css
+++ b/react-shop/src/styles/ProductList.module.css
@@ -6,12 +6,12 @@
 }
 
 .detailsDiv {
-  position: fixed;
-  top: 0;
-  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5;
+  color: green;
   background-color: #f1f1f1;
   padding: 10px;
   border: 1px solid #ccc;
-  max-width: 20%;
   text-align: left;
 }
